@@ -12,50 +12,132 @@ public class App {
         Map<String, String[]> grammarRules = gerarDicionario(codeSplitado);
 
         Map<String, Set<String>> first = gerarFirst(grammarRules);
-        
+        for (Map.Entry<String, Set<String>> entry : first.entrySet()) {
+            System.out.println(entry.getKey() + " -> " + entry.getValue());
+        }
+        System.out.println("\n");
+        Map<String, Set<String>> follow = gerarFollow(grammarRules, first);
+        for (Map.Entry<String, Set<String>> entry : follow.entrySet()) {
+            System.out.println(entry.getKey() + " -> " + entry.getValue());
+        }
     }
-    
+
     public static Map<String, Set<String>> gerarFirst(Map<String, String[]> grammarRules) {
         Map<String, Set<String>> first = new HashMap<>();
-        do{
+        do {
             for (Map.Entry<String, String[]> entry : grammarRules.entrySet()) {
                 String key = entry.getKey();
                 String[] values = entry.getValue();
                 Set<String> aux = new HashSet<>();
-                
+                boolean flag = true;
                 for (String value : values) {
-                    if (grammarRules.containsKey(value.charAt(0))){
-
-                    }
-
-
-
-
-
-
-                    if (value.length() > 1 && grammarRules.containsKey(value.charAt(0) + "" + value.charAt(1))) {
-                        Set<String> aux2 = first.get(value);
-                        aux.addAll(aux2);
-                        if (aux2.contains("epsilon")) {
-                            aux.remove("epsilon");
-                            aux.addAll(aux2);
+                    if (grammarRules.containsKey(String.valueOf(value.charAt(0)))) {
+                        String aux2 = String.valueOf(value.charAt(0));
+                        if (value.length() > 1 && grammarRules.containsKey(aux2 + String.valueOf(value.charAt(1)))) {
+                            aux2 = aux2 + "'";
                         }
-                    }else{
 
+                        if (first.containsKey(aux2)) {
+                            aux.addAll(first.get(aux2));
+                        } else {
+                            flag = false;
+                            break;
+                        }
+                    } else {
+                        if (value.equals("id")) {
+                            aux.add("id");
+                        } else
+                            aux.add(String.valueOf(value.charAt(0)));
                     }
 
                 }
-                first.put(key, aux);
+                if (flag) {
+                    first.put(key, aux);
+                }
             }
-
-
-        }while(first.size() != grammarRules.size());
+        } while (first.size() != grammarRules.size());
         return first;
     }
-    
+
+    public static Map<String, Set<String>> gerarFollow(Map<String, String[]> grammarRules,
+            Map<String, Set<String>> first) {
+        Map<String, Set<String>> follow = new HashMap<>();
+        do {
+            boolean toPutFinalCaracter = true;
+            for (Map.Entry<String, String[]> entry : grammarRules.entrySet()) {
+                // se ja tem pula
+                if (follow.containsKey(entry.getKey())) {
+                    continue;
+                }
+                String key = entry.getKey();
+                Set<String> aux = new HashSet<>();
+                if (toPutFinalCaracter) {
+                    aux.add("$");
+                    toPutFinalCaracter = false;
+                }
+                boolean flag = true;
+
+                for (Map.Entry<String, String[]> entry2 : grammarRules.entrySet()) {
+                    String key2 = entry2.getKey();
+                    String[] values2 = entry2.getValue();
+                    boolean flag2 = true;
+                    for (String value : values2) {
+                        // se nao tem o key na produção pula
+                        if (!value.contains(key)) {
+                            continue;
+                        }
+
+                        Integer index = value.lastIndexOf(key);
+                        if (value.length() > index + 1) {
+                            String nextElement = String.valueOf(value.charAt(index + 1));
+
+                            if (grammarRules.containsKey(nextElement)) {
+                                if (value.length() > index + 2 && grammarRules.containsKey(nextElement + "'")) {
+                                    nextElement += "'";
+                                }
+                                // Regra : Se existe A → αBβ, então First(β) vai para Follow(B)
+                                aux.addAll(first.get(nextElement));
+
+                                // Regra : Se First(nextElement) contém # (vazio) , adicionamos Follow(key2) em Follow(key)
+                                if (first.get(nextElement).contains("#")) {
+                                    if (follow.containsKey(key2)) {
+                                        aux.addAll(follow.get(key2));
+                                    } else {
+                                        flag2 = false;
+                                        break;
+                                    }
+                                }
+                            } else {
+                                aux.add(nextElement);
+                            }
+                        } else {
+                            // Regra : Se B está no final de uma produção, Follow(de onde ele ta) vai para Follow(B)
+                            if (!key.equals(key2)) {
+                                if (follow.containsKey(key2)) {
+                                    aux.addAll(follow.get(key2));
+                                } else {
+                                    flag2 = false;
+                                    break;
+                                }
+                            }
+                        }
+                    }
+                    if (!flag2) {
+                        flag = false;
+                        break;
+                    }
+                }
+                if (flag) {
+                    follow.put(key, aux);
+                }
+            }
+        } while (follow.size() != grammarRules.size());
+        return follow;
+    }
+
     public static String lerTXT(String caminho) {
         try {
-            return Files.readString(Paths.get(caminho));
+            return new String(Files.readAllBytes(Paths.get(caminho)));
         } catch (IOException e) {
             System.out.println("Erro ao ler o arquivo: " + e.getMessage());
             return "";
@@ -63,8 +145,8 @@ public class App {
     }
 
     public static Map<String, String[]> gerarDicionario(String[] codeSplitado) {
-        Map<String, String[]> grammarRules = new HashMap<>();
-        
+        Map<String, String[]> grammarRules = new LinkedHashMap<>();
+
         for (String line : codeSplitado) {
             String[] parts = line.split("->");
             if (parts[1].contains("|")) {
@@ -82,5 +164,5 @@ public class App {
         }
         return grammarRules;
     }
-    
+
 }
